sbc: fix shellhost install task

--- a/sbc/tasks/install-shellhost-ubuntu.yml
+++ b/sbc/tasks/install-shellhost-ubuntu.yml
@@ -10,7 +10,7 @@
 
  - git:
      repo: https://github.com/practable/relay.git
-     dest: /home/pi/sources/relay
+     dest: /home/ubuntu/sources/relay
      update: yes
 
  - name: shell build
