--- a/ui/package.json
+++ b/ui/package.json
@@ -1,85 +1,34 @@
 {
   "name": "truss-ui",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
-    "test": "jest"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@cycjimmy/jsmpeg-player": "git+https://github.com/timdrysdale/jsmpeg-player.git",
+    "@cycjimmy/jsmpeg-player": "git+https://github.com/practable/jsmpeg-player.git",
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "chart.js": "^2.9.4",
-    "core-js": "^3.6.5",
     "dayjs": "^1.10.6",
     "es6-promise": "^4.2.8",
     "html2canvas": "^1.1.4",
-    "vue": "^3.2.20",
-    "vuex": "^4.0.0"
+    "vue": "^3.2.47",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "^4.5.13",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "vite": "^4.1.4",
     "@vue/test-utils": "^2.0.0-0",
-    "babel-core": "^7.0.0-beta.3",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "jest": "^26.6.3",
     "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-alpha.10",
-    "vue-template-compiler": "^2.6.14"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {},
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "jest": true
-        }
-      }
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "transform": {
-      "^.+\\.js$": "babel-jest",
-      ".*\\.(vue)$": "vue-jest",
-      "^.+\\.vue$": "vue-jest"
-    },
-    "preset": "@vue/cli-plugin-unit-jest"
+    "jsdom": "^21.1.0"
   }
 }
