--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "typescript": "~3.9.3",
-    "jsdom": "^21.1.0"
+    "jsdom": "^21.1.0",
+    "vitest": "^0.29.1"
   }
 }
